[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge"
version = "0.1.0"
description = "Karpathy-style LLM Knowledge Base — raw/ → compile → wiki/ → lint"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "liamsysmind"}]

[project.optional-dependencies]
file-converter = [
    "mammoth>=1.6.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "python-pptx>=0.6.23",
    "PyMuPDF>=1.23.0",
]
