[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiforge"
version = "0.1.0"
description = "WikiForge — Karpathy-style LLM Knowledge Base. raw/ → compile → wiki/ → lint"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "liamsysmind"}]

[project.optional-dependencies]
file-converter = [
    "file2md @ git+https://github.com/liamsysmind/file2md.git",
]
